          because gnu99 is more widely assumed in the exsiting C libraries than c99.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove native/lib directory from the directories that libraries are searched for at runtime
          because generally libraries exists in the system, not the module sources.

0.9122  2021-01-17
        [CHANGES]
        * new_cpp, new_cpp11 methods of SPVM::Builder::Config use the linker that linked Perl itself.
        * new_cpp, new_cpp11 methods of SPVM::Builder::Config use the clang++ compiler if the Perl itself was compiled by clang.
        
        [FIX BUGS]
        * Fix the bug that C++ native API tests fail on FreeBSD.

0.9121  2021-01-15
        [CHANGES]
        * Improve the error messages that instance methods are called as class methods,
          and class methods are called as instance methods
        * Simplify the Makefile created by SPVM::Builder::Util::create_make_rule_native
          and SPVM::Builder::Util::create_make_rule_precompile
        [FIX BUGS]
        * Fix the bug that the current class syntax "&_foo" becomes a compilation error.
        * Fix the cache bug that when SPVM module file is updated, the shared library is not created.
        * Fix the test bug that copmile cache test fails.
0.9120  2021-01-14
        [CHANGES]
        * Native and precompile shared object files are cached.

0.9119  2021-01-14
        [CHANGES]
        * Suppress clang 12+ -Wcompound-token-split-by-macro warnings in perl.h when compiling SPVM.xs

        [NON BACKWORD COMPATIBLE CHANGES]
        * This is interface bug fix required. The effect is little.
          [Before]
          void* (*alloc_memory_block_zero)(SPVM_ENV* env, int64_t byte_size);
          
          [After]
          void* (*alloc_memory_block_zero)(SPVM_ENV* env, size_t byte_size);

        [FIX BUGS]
        * Fix pointer class test bugs.

0.9118  2021-01-13
        [CHANGES]