@@ -8,6 +8,7 @@ Revision history for SPVM
         [NON BACKWORD COMPATIBLE CHANGES]
         * Remove native/lib directory from the directories that libraries are searched for at runtime
           because generally libraries exists in the system, not the module sources.
+        * Resouce modules must be loaded as SPVM modules.
 
 0.9122  2021-01-17
         [CHANGES]
